improvements to user token management
